@@ -1,3 +1,6 @@
+30 May 2005 Sylvain Pion
+- Handle_for : add unique() and use_count() (as in tr1::shared_ptr).
+
 28 May 2005 Sylvain Pion
 - More on Kernel/Dimension_utils.h.
 
